# gstreamer

./: .gitignore  CMakeLists.txt  README.md
basic-tutorials/basic-tutorial-10_gstreamer_tools/: README.md
basic-tutorials/basic-tutorial-11_debugging_tools/: README.md
basic-tutorials/basic-tutorial-12_streaming/: README.md  basic-tutorial-12.c
basic-tutorials/basic-tutorial-13_playback_speed/: README.md  basic-tutorial-13.c
basic-tutorials/basic-tutorial-14_handy_elements/: README.md
basic-tutorials/basic-tutorial-16_platform_specific_elements/: README.md
basic-tutorials/basic-tutorial-1_hello_world/: README.md  basic-tutorial-1.c
basic-tutorials/basic-tutorial-2_gstreamer_concepts/: README.md  basic-tutorial-2.c
basic-tutorials/basic-tutorial-3_dynamic_pipelines/: README.md  basic-tutorial-3-audio_video.c  basic-tutorial-3-video.c  basic-tutorial-3.c  pipeline_PLAYING.dot
basic-tutorials/basic-tutorial-4_time_management/: README.md  basic-tutorial-4.c
basic-tutorials/basic-tutorial-5_GUI_toolkit_integration/: README.md  basic-tutorial-5.c
basic-tutorials/basic-tutorial-6_media_formats_and_pad/: README.md  basic-tutorial-6.c
basic-tutorials/basic-tutorial-7_multithreading_and_pad_availability/: README.md  basic-tutorial-7.c  basic-tutorial-7_modify.c
basic-tutorials/basic-tutorial-8_short_cutting_the_pipeline/: README.md  basic-tutorial-8.c  basic-tutorial-8_modify.c
basic-tutorials/basic-tutorial-9_media_inforation_gathering/: README.md  basic-tutorial-9.c
playback-tutorials/playback-tutorial-1_playbin_usage/: README.md  playback-tutorial-1.c
playback-tutorials/playback-tutorial-2_subtitle_management/: README.md  playback-tutorial-2.c
playback-tutorials/playback-tutorial-3_short_cutting_the_pipeline/: README.md  playback-tutorial-3.c  playback-tutorial-3_video.c
playback-tutorials/playback-tutorial-4_progressive_streaming/: README.md  playback-tutorial-4.c
playback-tutorials/playback-tutorial-5_color_balance/: README.md  playback-tutorial-5.c
playback-tutorials/playback-tutorial-6_audio_visualization/: README.md  playback-tutorial-6.c
playback-tutorials/playback-tutorial-7_custom_playbin_sinks/: README.md  playback-tutorial-7.c  playback-tutorial-7_video.c
playback-tutorials/playback-tutorial-8_hardware_accelerated_video_decoding/: README.md
playback-tutorials/playback-tutorial-9_digital_audio_pass-through/: README.md
test/rtsp/: push-rtsp.cpp  rtsp-hw-opencv.cpp  rtsp-hw.cpp  rtsp.cc
test/test1/: mul_pull.cc  mul_pull_place.cc
